--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 plugins {
-    id 'java'
+    id 'org.springframework.boot' version '2.5.6'
+    id 'idea'
 }
 
-group 'org.abondar.industrial'
+apply plugin: 'java'
+apply plugin: 'io.spring.dependency-management'
+
+group 'org.abondar.industrial.occupancy'
 version '1.0-SNAPSHOT'
 
 repositories {
@@ -10,8 +14,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation('org.springframework.boot:spring-boot-starter-web')
+
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.8.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.0')
+
 }
 
 test {
